# CatDesk

./: Cargo.toml  package.json
src/: command.rs  git_workflow.rs  main.rs  mcp.rs  planning.rs  repo_map.rs  server.rs  state.rs  task_queue.rs  verification.rs
src/widget/: catdesk_dashboard.html
