[package]
name = "catdesk"
version = "0.1.6"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = "0.1"
base64 = "0.22"
tiktoken-rs = "0.9.1"
image = "0.25"
rand = "0.8"
rand_mt = "4"
ngrok = "0.18.0"
toml = "0.8"
time = { version = "0.3", features = ["formatting", "macros"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tree-sitter = "0.25"
tree-sitter-bash = "0.25.1"
regex = "1"
globset = "0.4"
ignore = "0.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
